--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,4 +1,4 @@
-theme: jekyll-theme-minimal
+theme: jekyll-theme-cayman
 title: Scott
 description: Structure Canonisation using Ordered-Tree Translation
 logo: https://raw.githubusercontent.com/theplatypus/test-pages/master/docs/scott2.png
